@@ -21,31 +21,28 @@ import org.apache.nifi.annotation.lifecycle.OnEnabled;
 import org.apache.nifi.components.AllowableValue;
 import org.apache.nifi.components.PropertyDescriptor;
 import org.apache.nifi.components.PropertyDescriptor.Builder;
-import org.apache.nifi.components.PropertyValue;
 import org.apache.nifi.components.ValidationContext;
 import org.apache.nifi.components.ValidationResult;
 import org.apache.nifi.controller.ConfigurationContext;
-import org.apache.nifi.expression.ExpressionLanguageScope;
-import org.apache.nifi.processor.util.StandardValidators;
-import org.apache.nifi.schema.access.ConfluentSchemaRegistryWriter;
-import org.apache.nifi.schema.access.HortonworksAttributeSchemaReferenceWriter;
-import org.apache.nifi.schema.access.HortonworksEncodedSchemaReferenceWriter;
+import org.apache.nifi.migration.PropertyConfiguration;
 import org.apache.nifi.schema.access.NopSchemaAccessWriter;
 import org.apache.nifi.schema.access.SchemaAccessWriter;
 import org.apache.nifi.schema.access.SchemaField;
 import org.apache.nifi.schema.access.SchemaNameAsAttribute;
 import org.apache.nifi.schema.access.SchemaNotFoundException;
+import org.apache.nifi.schema.access.SchemaReferenceWriterSchemaAccessWriter;
 import org.apache.nifi.schema.access.WriteAvroSchemaAttributeStrategy;
+import org.apache.nifi.schemaregistry.services.SchemaReferenceWriter;
 import org.apache.nifi.serialization.record.RecordSchema;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 
 import static org.apache.nifi.schema.access.SchemaAccessUtils.INHERIT_RECORD_SCHEMA;
@@ -57,23 +54,14 @@ public abstract class SchemaRegistryRecordSetWriter extends SchemaRegistryServic
     public static final AllowableValue SCHEMA_NAME_ATTRIBUTE = new AllowableValue("schema-name", "Set 'schema.name' Attribute",
         "The FlowFile will be given an attribute named 'schema.name' and this attribute will indicate the name of the schema in the Schema Registry. Note that if"
             + "the schema for a record is not obtained from a Schema Registry, then no attribute will be added.");
+
     public static final AllowableValue AVRO_SCHEMA_ATTRIBUTE = new AllowableValue("full-schema-attribute", "Set 'avro.schema' Attribute",
         "The FlowFile will be given an attribute named 'avro.schema' and this attribute will contain the Avro Schema that describes the records in the FlowFile. "
             + "The contents of the FlowFile need not be Avro, but the text of the schema will be used.");
-    public static final AllowableValue HWX_CONTENT_ENCODED_SCHEMA = new AllowableValue("hwx-content-encoded-schema", "HWX Content-Encoded Schema Reference",
-        "The content of the FlowFile will contain a reference to a schema in the Schema Registry service. The reference is encoded as a single byte indicating the 'protocol version', "
-            + "followed by 8 bytes indicating the schema identifier, and finally 4 bytes indicating the schema version, as per the Hortonworks Schema Registry serializers and deserializers, "
-            + "as found at https://github.com/hortonworks/registry. "
-            + "This will be prepended to each FlowFile. Note that "
-            + "if the schema for a record does not contain the necessary identifier and version, an Exception will be thrown when attempting to write the data.");
-    public static final AllowableValue HWX_SCHEMA_REF_ATTRIBUTES = new AllowableValue("hwx-schema-ref-attributes", "HWX Schema Reference Attributes",
-        "The FlowFile will be given a set of 3 attributes to describe the schema: 'schema.identifier', 'schema.version', and 'schema.protocol.version'. Note that if "
-            + "the schema for a record does not contain the necessary identifier and version, an Exception will be thrown when attempting to write the data.");
-    public static final AllowableValue CONFLUENT_ENCODED_SCHEMA = new AllowableValue("confluent-encoded", "Confluent Schema Registry Reference",
-        "The content of the FlowFile will contain a reference to a schema in the Schema Registry service. The reference is encoded as a single "
-            + "'Magic Byte' followed by 4 bytes representing the identifier of the schema, as outlined at http://docs.confluent.io/current/schema-registry/docs/serializer-formatter.html. "
-            + "This will be prepended to each FlowFile. Note that if the schema for a record does not contain the necessary identifier and version, "
-            + "an Exception will be thrown when attempting to write the data. This is based on the encoding used by version 3.2.x of the Confluent Schema Registry.");
+
+    public static final AllowableValue SCHEMA_REFERENCE_WRITER = new AllowableValue("schema-reference-writer", "Schema Reference Writer",
+            "The schema reference information will be written through a configured Schema Reference Writer service implementation.");
+
     public static final AllowableValue NO_SCHEMA = new AllowableValue("no-schema", "Do Not Write Schema", "Do not add any schema-related information to the FlowFile.");
 
     public static final PropertyDescriptor SCHEMA_CACHE = new Builder()
@@ -83,7 +71,6 @@ public abstract class SchemaRegistryRecordSetWriter extends SchemaRegistryServic
         .required(false)
         .identifiesControllerService(RecordSchemaCacheService.class)
         .build();
-
 
     /**
      * This constant is just a base spec for the actual PropertyDescriptor.
@@ -96,30 +83,43 @@ public abstract class SchemaRegistryRecordSetWriter extends SchemaRegistryServic
         .required(true)
         .build();
 
-    static final PropertyDescriptor SCHEMA_PROTOCOL_VERSION = new Builder()
-        .name("schema-protocol-version")
-        .displayName("Schema Protocol Version")
-        .description("The protocol version to be used for Schema Write Strategies that require a protocol version, such as Hortonworks Schema Registry strategies. " +
-            "Valid protocol versions for Hortonworks Schema Registry are integer values 1, 2, or 3.")
-        .required(false)
-        .expressionLanguageSupported(ExpressionLanguageScope.FLOWFILE_ATTRIBUTES)
-        .addValidator(StandardValidators.POSITIVE_INTEGER_VALIDATOR)
-        .dependsOn(SCHEMA_WRITE_STRATEGY, HWX_CONTENT_ENCODED_SCHEMA, HWX_SCHEMA_REF_ATTRIBUTES)
-        .defaultValue("1")
-        .build();
+    public static PropertyDescriptor SCHEMA_REFERENCE_WRITER_SERVICE = new Builder()
+            .name("Schema Reference Writer")
+            .description("Service implementation responsible for writing FlowFile attributes or content header with Schema reference information")
+            .dependsOn(SCHEMA_WRITE_STRATEGY, SCHEMA_REFERENCE_WRITER)
+            .required(true)
+            .identifiesControllerService(SchemaReferenceWriter.class)
+            .build();
 
+    private static final String OBSOLETE_CONFLUENT_ENCODED_WRITE_STRATEGY = "confluent-encoded";
+
+    private static final String OBSOLETE_SCHEMA_PROTOCOL_VERSION = "schema-protocol-version";
+
+    private static final String CONFLUENT_ENCODED_SCHEMA_REFERENCE_WRITER = "org.apache.nifi.confluent.schemaregistry.ConfluentEncodedSchemaReferenceWriter";
 
     private volatile ConfigurationContext configurationContext;
+
     private volatile SchemaAccessWriter schemaAccessWriter;
 
-    private final List<AllowableValue> schemaWriteStrategyList = Collections.unmodifiableList(Arrays.asList(
-        NO_SCHEMA, SCHEMA_NAME_ATTRIBUTE, AVRO_SCHEMA_ATTRIBUTE, HWX_SCHEMA_REF_ATTRIBUTES, HWX_CONTENT_ENCODED_SCHEMA, CONFLUENT_ENCODED_SCHEMA));
+    private final List<AllowableValue> schemaWriteStrategies = List.of(NO_SCHEMA, SCHEMA_NAME_ATTRIBUTE, AVRO_SCHEMA_ATTRIBUTE, SCHEMA_REFERENCE_WRITER);
 
-    private final List<AllowableValue> schemaAccessStrategyList = Collections.unmodifiableList(Arrays.asList(
-        INHERIT_RECORD_SCHEMA, SCHEMA_NAME_PROPERTY, SCHEMA_TEXT_PROPERTY));
+    private final List<AllowableValue> schemaAccessStrategies = List.of(INHERIT_RECORD_SCHEMA, SCHEMA_NAME_PROPERTY, SCHEMA_TEXT_PROPERTY);
 
-    private final Set<String> schemaWriteStrategiesRequiringProtocolVersion = new HashSet<>(Arrays.asList(
-        HWX_CONTENT_ENCODED_SCHEMA.getValue(), HWX_SCHEMA_REF_ATTRIBUTES.getValue()));
+    @Override
+    public void migrateProperties(final PropertyConfiguration propertyConfiguration) {
+        propertyConfiguration.removeProperty(OBSOLETE_SCHEMA_PROTOCOL_VERSION);
+
+        final Optional<String> schemaWriteStrategyFound = propertyConfiguration.getPropertyValue(SCHEMA_WRITE_STRATEGY);
+        if (schemaWriteStrategyFound.isPresent()) {
+            final String schemaWriteStrategy = schemaWriteStrategyFound.get();
+            if (OBSOLETE_CONFLUENT_ENCODED_WRITE_STRATEGY.equals(schemaWriteStrategy)) {
+                propertyConfiguration.setProperty(SCHEMA_WRITE_STRATEGY, SCHEMA_REFERENCE_WRITER.getValue());
+
+                final String serviceId = propertyConfiguration.createControllerService(CONFLUENT_ENCODED_SCHEMA_REFERENCE_WRITER, Collections.emptyMap());
+                propertyConfiguration.setProperty(SCHEMA_REFERENCE_WRITER_SERVICE, serviceId);
+            }
+        }
+    }
 
     @Override
     protected List<PropertyDescriptor> getSupportedPropertyDescriptors() {
@@ -132,7 +132,7 @@ public abstract class SchemaRegistryRecordSetWriter extends SchemaRegistryServic
             .allowableValues(strategies)
             .build());
         properties.add(SCHEMA_CACHE);
-        properties.add(SCHEMA_PROTOCOL_VERSION);
+        properties.add(SCHEMA_REFERENCE_WRITER_SERVICE);
         properties.addAll(super.getSupportedPropertyDescriptors());
 
         return properties;
@@ -155,19 +155,10 @@ public abstract class SchemaRegistryRecordSetWriter extends SchemaRegistryServic
     public void storeSchemaWriteStrategy(final ConfigurationContext context) {
         this.configurationContext = context;
 
-        // If Schema Protocol Version is specified without EL then we can create it up front, otherwise when
-        // EL is present we will re-create it later so we can re-evaluate the EL against the incoming variables
-
         final String strategy = context.getProperty(getSchemaWriteStrategyDescriptor()).getValue();
-        if (strategy != null) {
-            final RecordSchemaCacheService recordSchemaCacheService = context.getProperty(SCHEMA_CACHE).asControllerService(RecordSchemaCacheService.class);
-
-            final PropertyValue protocolVersionValue = getConfigurationContext().getProperty(SCHEMA_PROTOCOL_VERSION);
-            if (!protocolVersionValue.isExpressionLanguagePresent()) {
-                final int protocolVersion = context.getProperty(SCHEMA_PROTOCOL_VERSION).asInteger();
-                this.schemaAccessWriter = createSchemaWriteStrategy(strategy, protocolVersion, recordSchemaCacheService);
-            }
-        }
+        final RecordSchemaCacheService recordSchemaCacheService = context.getProperty(SCHEMA_CACHE).asControllerService(RecordSchemaCacheService.class);
+        final SchemaReferenceWriter schemaReferenceWriter = context.getProperty(SCHEMA_REFERENCE_WRITER_SERVICE).asControllerService(SchemaReferenceWriter.class);
+        this.schemaAccessWriter = createSchemaWriteStrategy(strategy, recordSchemaCacheService, schemaReferenceWriter);
     }
 
     @Override
@@ -176,45 +167,25 @@ public abstract class SchemaRegistryRecordSetWriter extends SchemaRegistryServic
     }
 
     protected SchemaAccessWriter getSchemaAccessWriter(final RecordSchema schema, final Map<String,String> variables) throws SchemaNotFoundException {
-        // If Schema Protocol Version is using expression language, then we reevaluate against the passed in variables
-        final PropertyValue protocolVersionValue = getConfigurationContext().getProperty(SCHEMA_PROTOCOL_VERSION);
-        if (protocolVersionValue.isExpressionLanguagePresent()) {
-            final int protocolVersion;
-            final String protocolVersionString = protocolVersionValue.evaluateAttributeExpressions(variables).getValue();
-            try {
-                protocolVersion = Integer.parseInt(protocolVersionString);
-            } catch (NumberFormatException nfe) {
-                throw new SchemaNotFoundException("Unable to create Schema Write Strategy because " + SCHEMA_PROTOCOL_VERSION.getDisplayName()
-                        + " must be a positive integer, but was '" + protocolVersionString + "'", nfe);
-            }
-
-            // Now recreate the SchemaAccessWriter since we may have a new value for Schema Protocol Version
-            final String strategy = getConfigurationContext().getProperty(getSchemaWriteStrategyDescriptor()).getValue();
-            if (strategy != null) {
-                final RecordSchemaCacheService recordSchemaCacheService = getConfigurationContext().getProperty(SCHEMA_CACHE).asControllerService(RecordSchemaCacheService.class);
-                schemaAccessWriter = createSchemaWriteStrategy(strategy, protocolVersion, recordSchemaCacheService);
-            }
-        }
-
         schemaAccessWriter.validateSchema(schema);
         return schemaAccessWriter;
     }
 
     protected List<AllowableValue> getSchemaWriteStrategyValues() {
-        return schemaWriteStrategyList;
+        return schemaWriteStrategies;
     }
 
     @Override
     protected List<AllowableValue> getSchemaAccessStrategyValues() {
-        return schemaAccessStrategyList;
+        return schemaAccessStrategies;
     }
 
     protected SchemaAccessWriter getSchemaWriteStrategy() {
         return schemaAccessWriter;
     }
 
-    private SchemaAccessWriter createSchemaWriteStrategy(final String strategy, final Integer protocolVersion, final RecordSchemaCacheService recordSchemaCacheService) {
-        final SchemaAccessWriter writer = createRawSchemaWriteStrategy(strategy, protocolVersion);
+    private SchemaAccessWriter createSchemaWriteStrategy(final String strategy, final RecordSchemaCacheService recordSchemaCacheService, final SchemaReferenceWriter schemaReferenceWriter) {
+        final SchemaAccessWriter writer = createRawSchemaWriteStrategy(strategy, schemaReferenceWriter);
         if (recordSchemaCacheService == null) {
             return writer;
         } else {
@@ -222,17 +193,13 @@ public abstract class SchemaRegistryRecordSetWriter extends SchemaRegistryServic
         }
     }
 
-    private SchemaAccessWriter createRawSchemaWriteStrategy(final String strategy, final Integer protocolVersion) {
+    private SchemaAccessWriter createRawSchemaWriteStrategy(final String strategy, final SchemaReferenceWriter schemaReferenceWriter) {
         if (strategy.equalsIgnoreCase(SCHEMA_NAME_ATTRIBUTE.getValue())) {
             return new SchemaNameAsAttribute();
         } else if (strategy.equalsIgnoreCase(AVRO_SCHEMA_ATTRIBUTE.getValue())) {
             return new WriteAvroSchemaAttributeStrategy();
-        } else if (strategy.equalsIgnoreCase(HWX_CONTENT_ENCODED_SCHEMA.getValue())) {
-            return new HortonworksEncodedSchemaReferenceWriter(protocolVersion);
-        } else if (strategy.equalsIgnoreCase(HWX_SCHEMA_REF_ATTRIBUTES.getValue())) {
-            return new HortonworksAttributeSchemaReferenceWriter(protocolVersion);
-        } else if (strategy.equalsIgnoreCase(CONFLUENT_ENCODED_SCHEMA.getValue())) {
-            return new ConfluentSchemaRegistryWriter();
+        } else if (strategy.equalsIgnoreCase(SCHEMA_REFERENCE_WRITER.getValue())) {
+            return new SchemaReferenceWriterSchemaAccessWriter(schemaReferenceWriter);
         } else if (strategy.equalsIgnoreCase(NO_SCHEMA.getValue())) {
             return new NopSchemaAccessWriter();
         }
@@ -246,8 +213,7 @@ public abstract class SchemaRegistryRecordSetWriter extends SchemaRegistryServic
             return EnumSet.noneOf(SchemaField.class);
         }
 
-        final Set<SchemaField> requiredFields = writer.getRequiredSchemaFields();
-        return requiredFields;
+        return writer.getRequiredSchemaFields();
     }
 
     @Override
@@ -268,17 +234,6 @@ public abstract class SchemaRegistryRecordSetWriter extends SchemaRegistryServic
                     + " but the configured Schema Access Strategy does not provide this information in conjunction with the selected Schema Registry. "
                     + "This Schema Access Strategy, as configured, cannot be used in conjunction with this Schema Write Strategy.")
                 .build());
-        }
-
-        final String schemaWriteStrategy = validationContext.getProperty(getSchemaWriteStrategyDescriptor()).getValue();
-        final String protocolVersion = validationContext.getProperty(SCHEMA_PROTOCOL_VERSION).getValue();
-
-        if (schemaWriteStrategy != null && schemaWriteStrategiesRequiringProtocolVersion.contains(schemaWriteStrategy) && protocolVersion == null) {
-            results.add(new ValidationResult.Builder()
-                    .subject(SCHEMA_PROTOCOL_VERSION.getDisplayName())
-                    .valid(false)
-                    .explanation("The configured Schema Write Strategy requires a Schema Protocol Version to be specified.")
-                    .build());
         }
 
         return results;
