@@ -17,30 +17,41 @@
 
 package org.apache.nifi.python.processor;
 
-import java.util.Arrays;
+import org.apache.nifi.annotation.behavior.DefaultRunDuration;
+import org.apache.nifi.annotation.behavior.SupportsBatching;
+import org.apache.nifi.annotation.behavior.SupportsSensitiveDynamicProperties;
+import org.apache.nifi.annotation.lifecycle.OnScheduled;
+import org.apache.nifi.annotation.lifecycle.OnStopped;
+import org.apache.nifi.components.AsyncLoadedProcessor;
+import org.apache.nifi.components.PropertyDescriptor;
+import org.apache.nifi.components.ValidationContext;
+import org.apache.nifi.components.ValidationResult;
+import org.apache.nifi.logging.ComponentLog;
+import org.apache.nifi.processor.AbstractProcessor;
+import org.apache.nifi.processor.ProcessContext;
+import org.apache.nifi.processor.ProcessorInitializationContext;
+import org.apache.nifi.processor.Relationship;
+
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
-import org.apache.nifi.annotation.lifecycle.OnScheduled;
-import org.apache.nifi.annotation.lifecycle.OnStopped;
-import org.apache.nifi.components.PropertyDescriptor;
-import org.apache.nifi.components.ValidationContext;
-import org.apache.nifi.components.ValidationResult;
-import org.apache.nifi.processor.AbstractProcessor;
-import org.apache.nifi.processor.ProcessContext;
-import org.apache.nifi.processor.Relationship;
+import java.util.function.Supplier;
 
-public abstract class PythonProcessorProxy extends AbstractProcessor {
-    private final PythonProcessorBridge bridge;
+@SupportsBatching(defaultDuration = DefaultRunDuration.TWENTY_FIVE_MILLIS)
+@SupportsSensitiveDynamicProperties
+public abstract class PythonProcessorProxy extends AbstractProcessor implements AsyncLoadedProcessor {
+    private final String processorType;
+    private volatile PythonProcessorInitializationContext initContext;
+    private volatile PythonProcessorBridge bridge;
     private volatile Set<Relationship> cachedRelationships = null;
     private volatile List<PropertyDescriptor> cachedPropertyDescriptors = null;
     private volatile Map<String, PropertyDescriptor> cachedDynamicDescriptors = null;
-    private boolean supportsDynamicProperties;
-    private volatile boolean running = false;
+    private volatile Boolean supportsDynamicProperties;
 
     protected static final Relationship REL_ORIGINAL = new Relationship.Builder()
         .name("original")
@@ -51,22 +62,80 @@ public abstract class PythonProcessorProxy extends AbstractProcessor {
         .name("failure")
         .description("The original FlowFile will be routed to this relationship if it unable to be transformed for some reason")
         .build();
-    private static final Set<Relationship> implicitRelationships = Collections.unmodifiableSet(
-        new HashSet<>(Arrays.asList(REL_ORIGINAL, REL_FAILURE)));
+    private static final Set<Relationship> implicitRelationships = Set.of(
+        REL_ORIGINAL,
+        REL_FAILURE);
 
-    public PythonProcessorProxy(final PythonProcessorBridge bridge) {
-        this.bridge = bridge;
-        supportsDynamicProperties = bridge.getProcessorAdapter().isDynamicPropertySupported();
+    public PythonProcessorProxy(final String processorType, final Supplier<PythonProcessorBridge> bridgeFactory) {
+        this.processorType = processorType;
+
+        Thread.ofVirtual().name("Initialize " + processorType).start(() -> {
+            this.bridge = bridgeFactory.get();
+
+            // If initialization context has already been set, initialize bridge.
+            final PythonProcessorInitializationContext pythonInitContext = initContext;
+            if (pythonInitContext != null) {
+                this.bridge.initialize(pythonInitContext);
+            }
+        });
+    }
+
+    @Override
+    protected void init(final ProcessorInitializationContext context) {
+        super.init(context);
+
+        final PythonProcessorInitializationContext initContext = new PythonProcessorInitializationContext() {
+            @Override
+            public String getIdentifier() {
+                return context.getIdentifier();
+            }
+
+            @Override
+            public ComponentLog getLogger() {
+                return context.getLogger();
+            }
+        };
+
+        this.initContext = initContext;
+
+        // If Bridge has already been set, initialize it.
+        final PythonProcessorBridge bridge = this.bridge;
+        if (bridge != null) {
+            bridge.initialize(initContext);
+        }
+    }
+
+    protected Optional<PythonProcessorBridge> getBridge() {
+        return Optional.ofNullable(this.bridge);
+    }
+
+    @Override
+    public LoadState getState() {
+        if (bridge == null) {
+            return LoadState.INITIALIZING_ENVIRONMENT;
+        }
+
+        return bridge.getLoadState();
     }
 
     @Override
     protected List<PropertyDescriptor> getSupportedPropertyDescriptors() {
-        if (running && cachedPropertyDescriptors != null) {
+        if (cachedPropertyDescriptors != null) {
             return this.cachedPropertyDescriptors;
         }
 
+        if (bridge == null) {
+            return Collections.emptyList();
+        }
+
+        final Optional<PythonProcessorAdapter> optionalAdapter = bridge.getProcessorAdapter();
+        if (optionalAdapter.isEmpty()) {
+            // If we don't have the adapter yet, use whatever is cached, even if it's old, or an empty List if we have nothing cached.
+            return this.cachedPropertyDescriptors == null ? Collections.emptyList() : cachedPropertyDescriptors;
+        }
+
         try {
-            final List<PropertyDescriptor> properties = bridge.getProcessorAdapter().getSupportedPropertyDescriptors();
+            final List<PropertyDescriptor> properties = optionalAdapter.get().getSupportedPropertyDescriptors();
             this.cachedPropertyDescriptors = properties; // cache descriptors in case the processor is updated and the properties can no longer be properly accessed
             return properties;
         } catch (final Exception e) {
@@ -76,19 +145,45 @@ public abstract class PythonProcessorProxy extends AbstractProcessor {
         }
     }
 
-
     @Override
     protected Collection<ValidationResult> customValidate(final ValidationContext validationContext) {
+        if (bridge == null) {
+            return List.of(new ValidationResult.Builder()
+                .subject("Processor")
+                .explanation("Python environment is not yet initialized")
+                .valid(false)
+                .build());
+        }
+
+        final LoadState loadState = bridge.getLoadState();
+        if (loadState == LoadState.LOADING_PROCESSOR_CODE || loadState == LoadState.DOWNLOADING_DEPENDENCIES) {
+            return List.of(new ValidationResult.Builder()
+                .subject("Processor")
+                .explanation("Processor has not yet completed initialization")
+                .valid(false)
+                .build());
+        }
+
         try {
             reload();
-            return bridge.getProcessorAdapter().customValidate(validationContext);
+
+            final Optional<PythonProcessorAdapter> optionalAdapter = bridge.getProcessorAdapter();
+            if (optionalAdapter.isEmpty()) {
+                return List.of(new ValidationResult.Builder()
+                    .subject("Processor")
+                    .explanation("Processor has not yet completed initialization")
+                    .valid(false)
+                    .build());
+            }
+
+            return optionalAdapter.get().customValidate(validationContext);
         } catch (final Exception e) {
             getLogger().warn("Failed to perform validation for Python Processor {}; assuming invalid", this, e);
 
             return Collections.singleton(new ValidationResult.Builder()
                 .subject("Perform Validation")
                 .valid(false)
-                .explanation("Unable to communicate with Python Processor")
+                .explanation("Failed to trigger Python Processor to perform validation: " + e)
                 .build());
         }
     }
@@ -105,8 +200,14 @@ public abstract class PythonProcessorProxy extends AbstractProcessor {
             return cachedDynamicDescriptors.get(propertyDescriptorName);
         }
 
+        if (bridge == null) {
+            return null;
+        }
+
         try {
-            return bridge.getProcessorAdapter().getSupportedDynamicPropertyDescriptor(propertyDescriptorName);
+            final Optional<PythonProcessorAdapter> optionalAdapter = bridge.getProcessorAdapter();
+            return optionalAdapter.map(adapter -> adapter.getSupportedDynamicPropertyDescriptor(propertyDescriptorName))
+                    .orElse(null);
         } catch (final Exception e) {
             getLogger().warn("Failed to obtain Dynamic Property Descriptor with name {} from Python Processor {}; assuming property is not valid", propertyDescriptorName, this, e);
             return null;
@@ -114,7 +215,18 @@ public abstract class PythonProcessorProxy extends AbstractProcessor {
     }
 
     protected boolean isSupportsDynamicPropertyDescriptor() {
-        return supportsDynamicProperties;
+        if (this.supportsDynamicProperties != null) {
+            return supportsDynamicProperties;
+        }
+
+        if (bridge == null) {
+            return false;
+        }
+
+        final Optional<PythonProcessorAdapter> adapter = bridge.getProcessorAdapter();
+        final boolean supported = adapter.map(PythonProcessorAdapter::isDynamicPropertySupported).orElse(false);
+        supportsDynamicProperties = supported;
+        return supported;
     }
 
     @OnScheduled
@@ -138,15 +250,8 @@ public abstract class PythonProcessorProxy extends AbstractProcessor {
         }
 
         this.cachedDynamicDescriptors = dynamicDescriptors;
-        this.running = true;
     }
 
-    @OnStopped
-    public void destroyCachedElements() {
-        this.running = false;
-        this.cachedRelationships = null;
-        this.cachedDynamicDescriptors = null;
-    }
 
     @Override
     public Set<Relationship> getRelationships() {
@@ -159,13 +264,20 @@ public abstract class PythonProcessorProxy extends AbstractProcessor {
     }
 
     private Set<Relationship> fetchRelationshipsFromPythonProcessor() {
+        if (bridge == null) {
+            return Collections.emptySet();
+        }
+
         Set<Relationship> processorRelationships;
         try {
-            processorRelationships = bridge.getProcessorAdapter().getRelationships();
+            processorRelationships = bridge.getProcessorAdapter()
+                    .map(PythonProcessorAdapter::getRelationships)
+                    .orElseGet(HashSet::new);
         } catch (final Exception e) {
             getLogger().warn("Failed to obtain list of Relationships from Python Processor {}; assuming no explicit relationships", this, e);
             processorRelationships = new HashSet<>();
         }
+
         processorRelationships.addAll(getImplicitRelationships());
         return processorRelationships;
     }
@@ -173,26 +285,55 @@ public abstract class PythonProcessorProxy extends AbstractProcessor {
 
     @OnScheduled
     public void onScheduled(final ProcessContext context) {
+        if (bridge == null) {
+            throw new IllegalStateException("Processor is not yet initialized");
+        }
+
         reload();
-        bridge.getProcessorAdapter().onScheduled(context);
+        bridge.getProcessorAdapter()
+            .orElseThrow(() -> new IllegalStateException("Processor has not finished initializing"))
+            .onScheduled(context);
     }
 
     @OnStopped
     public void onStopped(final ProcessContext context) {
-        bridge.getProcessorAdapter().onStopped(context);
+        if (bridge == null) {
+            throw new IllegalStateException("Processor is not yet initialized");
+        }
+
+        bridge.getProcessorAdapter()
+            .orElseThrow(() -> new IllegalStateException("Processor has not finished initializing"))
+            .onStopped(context);
     }
 
     @Override
     public String toString() {
-        return "PythonProcessor[type=" + bridge.getProcessorType() + ", id=" + getIdentifier() + "]";
+        return "PythonProcessor[type=" + processorType + ", id=" + getIdentifier() + "]";
     }
 
     private void reload() {
-        reloadProcessor();
-        supportsDynamicProperties = bridge.getProcessorAdapter().isDynamicPropertySupported();
+        if (bridge == null) {
+            return;
+        }
+
+        final boolean reloaded = bridge.reload();
+        if (reloaded) {
+            getLogger().info("Successfully reloaded Processor");
+        }
+
+        cachedPropertyDescriptors = null;
+        cachedRelationships = null;
+        supportsDynamicProperties = bridge.getProcessorAdapter()
+            .orElseThrow(() -> new IllegalStateException("Processor has not finished initializing"))
+            .isDynamicPropertySupported();
     }
 
-    protected abstract void reloadProcessor();
+    @Override
+    public void onPropertyModified(final PropertyDescriptor descriptor, final String oldValue, final String newValue) {
+        cachedPropertyDescriptors = null;
+        cachedRelationships = null;
+        super.onPropertyModified(descriptor, oldValue, newValue);
+    }
 
     protected Set<Relationship> getImplicitRelationships() {
         return implicitRelationships;
